--- a/index.html
+++ b/index.html
@@ -3,12 +3,61 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Website test</title>
+
+		<script src="https://code.jquery.com/jquery-3.3.1.min.js"
+			  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+			  crossorigin="anonymous"></script>
 	</head>
 
 
 	<body>
-		<h1>Hello Antoine</h1>
+		<h1>Hello Antoine Debug</h1>
 
+		 <canvas id="JtagAnim" width="400px" height="450px">
+
+        </canvas>
+
+<table>
+	<tr>
+		<th>JTAG CPU Operation</th><th colspan="3">Connect more ships (Daisy chaining)</th>
+	</tr>
+
+	<tr>
+		 <td>
+            		<button id="playAnimationJtag">Start Animation</button>
+        	</td>
+		<td>	 	
+
+<select id="operationPerform">
+                          <option selected="selected" value="boundaryScan">EXTEST</option> 
+                          <option value="bypassMode">BYPASS</option>
+                         <option value="SAMPLE">SAMPLE</option>
+                          <option value="IDCODE">IDCODE</option>
+                          
+                        </select>
+		<td>         
+                        <input type="checkbox" id="chip" value="dsp">DSP	
+		</td>
+		
+		<td>
+
+
+<select id="operationPerformDSP">
+                          <option selected="selected" value="boundaryScan">EXTEST</option> 
+                          <option value="bypassMode">BYPASS</option>
+                        <option value="SAMPLE">SAMPLE</option>
+                          <option value="IDCODE">IDCODE</option>
+                       </select>
+		</td>
+
+       
+	
+	</tr>
+</table>
+
+	<script src="script/animateOpenOCDJTAG.js">
+
+	</script>
 	</body>
 
 </html>
