Adding index.html

--- a/debug_linux_kernel/index.html
+++ b/debug_linux_kernel/index.html
@@ -9,8 +9,26 @@
 
 	<body>
 		<header>
-			<h1>Learn Debug With Animations</h1>
+			<h1>Dive into friendly debugging</h1>
 		</header>
+
+
+		<section>
+			<div class="debugTopic">			
+				<a href="https://jugurthab.github.io/debug_linux_kernel/jtag-basic-operation.html">jtag-basic-operation.html</a>
+			</div>
+
+			<div class="debugTopic">
+				<a href="https://jugurthab.github.io/debug_linux_kernel/zero-to-hero-openocd.html">zero-to-hero-openocd.html</a>
+			</div>	
+		</section>
+
+
+		<footer>
+			
+<p>Email contact : <a href="mailto:jugurthabelkalem@gmail.com">jugurthabelkalem@gmail.com</a>.</p>
+		   <small id="copyright">&copy; Copyright 2018, Jugurtha BELKALEM</small>
+		</footer>
 
 	</body>
 </html>
