Adding Contact information

--- a/index.html
+++ b/index.html
@@ -65,18 +65,36 @@ Buildroot, Vivado Design Suite, Visual Studio, Android Studio, Eclipse, Code-
                                 </section>
                 </section>
 
-                
 
                 <section>
                         <h3>Working Experience</h3>
-                                <section>
 <h4>Embedded Linux Engineer Internship</h4> 
 <h4>March to August 2018</h4>
-<a href="https://www.smile.eu/en"><img src="img/smile.png" alt="SMILE OpenSOurce"/>
+<a href="https://www.smile.eu/en" target="_blank"><img src="img/smile.png" alt="SMILE OpenSOurce"/></a>
 <h5>Topic : Debugging Linux OS</h5>
 <h6>Tools : OpenOCD, GDB, strace, ltrace, KGDB/KDB, FTrace (trace-cmd, Kernelshark), Perf, LTTng</h6>
-                                </section>                            
+                </section>
 
+              
+                <section>
+                            <h3>Want to know more ?</h3>
+
+<table>
+        <tr>
+            <td><a href="https://github.com/jugurthab" target="_blank"><img src="img/github.png" alt="" width="130px"  height="130px"/></a></td>
+            <td><a href="mailto:jugurthabelkalem@gmail.com"><img src="img/gmail.png" alt="" width="130px"  height="130px" /></a></td>
+            <td><a href="https://fr.linkedin.com/in/jugurtha-belkalem-707b7b105" target="_blank"><img src="img/linkedin.png" alt="" width="130px"  height="130px"/></a></td>
+        </tr>
+
+        <tr>
+            <td colspan="3"><a href="resume/BELKALEM_Jugurtha_CV.pdf">
+                <button style="width:100%; cursor:pointer;">
+                        Resume
+                </button>
+                </a>
+            </td>
+        </tr>
+</table>    
                 </section>
 
 			</div>
