--- a/index.html
+++ b/index.html
@@ -65,6 +65,25 @@
                 </section>
 
 
+
+                <section>
+                    <h3>Previous projects</h3>
+                    <section>                    
+                        <h4 style="color:red;">Smart Sudoku</h4>
+                        <h5>November 2017</h5>
+                        <h5><a href="https://drive.google.com/open?id=1TxLGiykaPKKRrPI_h-__VwloIRGNLjHV" style="color:yellow;" target="_blank">Demo here</a></h5>                    
+                        <h6><span style="color:orange;">Tools :</span> <em>Android studio</em></h6>
+                    </section>
+
+                    <section>
+                        <h4 style="color:red;">Autonomous mobile robot simulator (2D-3D)</h4>
+                        <h5>March 2016 To June 2016</h5>
+                        <h5><a href="https://drive.google.com/open?id=1llOiMNLnTdkENEY8cVxgmz7ewrBQA6iV" style="color:yellow;" target="_blank">Demo here</a></h5>                    
+                        <h6><span style="color:orange;">Tools :</span> <em>C (SDL library for graphics), Javscript (Three.js)</em></h6>
+
+                    </section>
+                </section>
+
                 <section style="font-size:80%;">
                         <h3>Working Experience</h3>
 <h4>Embedded Linux Engineer Internship</h4> 
