Adding kernel tracing animation

--- a/debug_linux_kernel/linux-tracers-utility.html
+++ b/debug_linux_kernel/linux-tracers-utility.html
@@ -18,11 +18,11 @@
 		        </canvas>
 
 <table>
-	<tr><th>Tool</th><th>Randomize function</th></tr>
+	<tr><th>Tool</th><th>Console Log</th></tr>
 	<tr>
 
             <td> 
-		<select>
+		<select id="selectTool">
 			  <option value="tracer" selected>Tracer</option>
 			  <option value="profiler">Profiler</option>
   
@@ -30,10 +30,10 @@
 
 	    </td>
 	
-	    <td><input type="checkbox" id="geenrateRandom"/>Generate random functions</td>
+	    <td id="logData">logData</td>
 	</tr>
 	<tr>
-		<td colspan="2"><button>Start Tracing</button></td>
+		<td colspan="2"><button id="playAnimationB">Start Tracing</button></td>
 	</tr>
 </table>
 		</article>
