Adding resizing response to animation

--- a/debug_linux_kernel/linux-tracers-utility.html
+++ b/debug_linux_kernel/linux-tracers-utility.html
@@ -10,15 +10,13 @@
 	</head>
 
 	<body>
-		<h1>Linux tracers and profilers</h1>
-
                 <article>
-		 	<canvas id="linuxTracersAnim" width="400px" height="550px">
+		 	<canvas id="linuxTracersAnim" width="400px" height="400px">
 
 		        </canvas>
 
 <table>
-	<tr><th>Tool</th><th>Console Log</th></tr>
+	<!--<tr><th>Tool</th><th>Console Log</th></tr>-->
 	<tr>
 
             <td> 
