--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         <h4 style="color:red;">Autonomous mobile robot simulator (2D-3D)</h4>
                         <h5>March 2016 To June 2016</h5>
                         <h5><a href="https://drive.google.com/open?id=1llOiMNLnTdkENEY8cVxgmz7ewrBQA6iV" style="color:yellow;" target="_blank">Demo here</a></h5>                    
-                        <h6><span style="color:orange;">Tools :</span> <em>C (SDL library for graphics), Javscript (Three.js)</em></h6>
+                        <h6><span style="color:orange;">Tools :</span> <em>C (SDL library for graphics), Javascript (Three.js)</em></h6>
 
                     </section>
                 </section>
@@ -194,7 +194,7 @@ $(document).ready(function(){
             labels: ["English", "French", "Arabic"],
             datasets: [{
                 label: 'Spoken and written languages',
-                data: [80, 60, 100],
+                data: [90, 80, 100],
                 backgroundColor: [
                     'rgba(54, 162, 235, 1)'
                 ],
