Updating previous projects

--- a/debug_linux_kernel/index.html
+++ b/debug_linux_kernel/index.html
@@ -37,7 +37,15 @@
 
                         <h3>Understand Basic OpenOCD syntax</h3>
                         <h4>Learn : initialize variables, declare processors, definning Tap controller, ...</h4>
-			        </section>	
+			        </section>
+
+                    <section>
+				        <h2><a href="https://jugurthab.github.io/debug_linux_kernel/zero-to-hero-openocd.html">Tracers vs Profilers</a></h2>
+
+                        <h3>Understand differences between tracers and profilers</h3>
+                        <h4>Learn : tracers and profilers usage.</h4>
+			        </section>
+	
 		        </section>
 
 
