--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                         <h1 style="color:red;font-size:180%;">Jugurtha BELKALEM</h1>
                         <img src="img/BELKALEM_JUGURTHA.JPG" alt="Jugurtha_BELKALEM_Picture" width="20%"/>
 
-                        <h3>Master 2 Degree Computer Engineering</h3>
+                        <h3>Master 2 Degree <br/> Computer Engineering</h3>
 
-                        <h4>Option : Software for embedded systems</h4>
+                        <h4><span style="color:yellow;">Option :</span> <strong><em>Software for embedded systems</em></strong></h4>
                 </section>
 
 
@@ -68,19 +68,39 @@
 
                 <section>
                     <h3>Previous projects</h3>
-                    <section>                    
-                        <h4 style="color:red;">Smart Sudoku</h4>
-                        <h5>November 2017</h5>
-                        <h5><a href="https://drive.google.com/open?id=1TxLGiykaPKKRrPI_h-__VwloIRGNLjHV" style="color:yellow;" target="_blank">Demo here</a></h5>                    
-                        <h6><span style="color:orange;">Tools :</span> <em>Android studio</em></h6>
-                    </section>
-
+                    
                     <section>
                         <h4 style="color:red;">Autonomous mobile robot simulator (2D-3D)</h4>
                         <h5>March 2016 To June 2016</h5>
                         <h5><a href="https://drive.google.com/open?id=1llOiMNLnTdkENEY8cVxgmz7ewrBQA6iV" style="color:yellow;" target="_blank">Demo here</a></h5>                    
                         <h6><span style="color:orange;">Tools :</span> <em>C (SDL library for graphics), Javascript (Three.js)</em></h6>
 
+                    </section>
+
+
+                    <section>
+                        <h4 style="color:red;">English test lab</h4>
+                        <h5>October 2016 To December 2016</h5>
+                        <h5><a href="https://drive.google.com/open?id=1fvW84W5MebpZTCvEtglxT3dwwUpoxXXe" style="color:yellow;" target="_blank">Demo here</a></h5>                    
+                        <h6><span style="color:orange;">Tools :</span> <em>Visual studio (.net)</em></h6>
+
+                    </section>
+
+
+                    <section>
+                        <h4 style="color:red;">Corporate administration tools
+ suite</h4>
+                        <h5>February 2017 To April 2017</h5>
+                        <h5><a href="https://drive.google.com/open?id=1dofxXIJ18NJT5aivkAnYdOx8YQcoq99b" style="color:yellow;" target="_blank">Demo here (<em>only a sample is shown</em>)</a></h5>                    
+                        <h6><span style="color:orange;">Tools :</span> <em>Visual studio (.net)</em></h6>
+
+                    </section>                
+
+                    <section>                    
+                        <h4 style="color:red;">Smart Sudoku</h4>
+                        <h5>November 2017</h5>
+                        <h5><a href="https://drive.google.com/open?id=1TxLGiykaPKKRrPI_h-__VwloIRGNLjHV" style="color:yellow;" target="_blank">Demo here</a></h5>                    
+                        <h6><span style="color:orange;">Tools :</span> <em>Android studio</em></h6>
                     </section>
                 </section>
 
@@ -90,7 +110,7 @@
 <h4>March 2018 - August 2018</h4>
 <h5><a href="https://www.smile.eu/en" target="_blank">AT SMILE Open Source Solutions</a></h5>
 <a href="https://www.smile.eu/en" target="_blank"><img src="img/smile.png" alt="SMILE OpenSOurce"/></a>
-<h5>Topic : Debugging Linux OS</h5>
+<h5>Topic : Debugging Linux OS (<em><a href="https://github.com/jugurthab/Linux_kernel_debug" target="_blank" style="text-decoration:none; color:yellow;">show result</a></em>)</h5>
 <h6>Tools : OpenOCD, GDB, strace, ltrace, KGDB/KDB, FTrace (trace-cmd, Kernelshark), Perf, LTTng</h6>
                 </section>
 
