Updating openocd anim

--- a/debug_linux_kernel/jtag-basic-operation.html
+++ b/debug_linux_kernel/jtag-basic-operation.html
@@ -13,13 +13,13 @@
 
 
 	<body>
-		<header>
+<!--		<header>
 			<h1>JTAG Basic Operations</h1>
 		</header>
+-->
 
-
-		<article>
-		 	<canvas id="JtagAnim" width="400px" height="550px">
+		<article style="width:100%; text-align:center;">
+		 	<canvas id="JtagAnim" width="500px" height="550px">
 
 		        </canvas>
 
